app/assets/stylesheets/goals.css.scss
// Place all the styles related to the Goals controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.action-field {
  width: 94px;
}

.goal-quantity-field {
  width: 80px;
}

.unit-field {
  width: 70px;
}

.frequency-field {
  width: 50px;
}

.frequency-unit-field {
  width: 80px;
}

.example {
  margin-top: -10px;
  color: gray;
}

#times-per_field {
  padding-top: 5px;
}

#times-per_example {
  padding-top: 5px;
  color: gray;
}

.goal {

  input {
    width: 75px !important;
  }

  select[id$='2i']{
    width: 125px !important;
  }

  select {
    width: 75px !important;
  }
}

#goal_frequency_unit {
  width: 100px;
}

.target {
  border: 2px;
  border-color: black;
  border-style: ridge;

}

.pass {
  background-color: red;
}
.fail {
  background-color: green;
}

form table input {
  width: 100px;
}

